src/objects/DF_Contact_Inbound_Change__c.object
<CustomObject>
    <description>Changes to DF contact records on progress</description>
    <fields>
        <fullName>BirthDate__c</fullName>
        <label>BirthDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City/Town</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_DF_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related DF Contact</label>
        <referenceTo>DF_Contact__c</referenceTo>
        <relationshipLabel>DF Contact Inbound Changes</relationshipLabel>
        <relationshipName>DF_Contact_Inbound_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <label>DF Contact Inbound Change</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>DF Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DF Contact Inbound Changes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>